2006-10-14  MINAMI Hirokazu <minami@mistfall.net>

	* xwindow/x_shortcut.c: fixed typo.
	(SF Bug#1568596, thanks to nakada-san)

2006-09-30  Seiichi SATO  <me@seiichisato.jp>

	* xwindow/x_term_manager.c: applied a patch from Nakada-san. (#1534313)

2006-08-13  Seiichi SATO  <me@seiichisato.jp>

	* tool/mlconfig/po/ar.po: Arabic translation contributed by Khaled
	  Hosny.
	* tool/mlconfig/po/LINGUAS: added 'ar'.

2006-05-07  Seiichi SATO  <me@seiichisato.jp>

	* xwindow/version.h.in: 2.9.3 -> 2.9.3 post

2006-05-07  Seiichi SATO  <me@seiichisato.jp>

	* 2.9.3 released.
	  (tag "rel-2_9_3")

	* configure.in, mlterm.spec, xwindow/version.h.in,
	  doc/en/ReleaseNote: updated for 2.9.3
	* configure: re-generated
	* doc/en/PLATFORMS: updated

2006-04-18  Seiichi SATO  <me@seiichisato.jp>

	* tool/mlconfig/po/vi.po: Vietnamese translation contributed by Pham
	Thanh Long.

	* tool/mlconfig/po/LINGUAS: added 'vi'.

2006-04-09  Seiichi SATO  <me@seiichisato.jp>

	* xwindow/x_screen.c (compare_key_state_with_modmap): allowed NULL
	as arguments such as is_shift and is_meta.

	* xwindow/x_screen.c (key_pressed): changed to be more compatibile
	with xterm. (e.g., Shift + F5: ESC [ 15 ; 2 ~)
	(Thanks to Konosuke Watanabe)

	* doc/term/mlterm.ti: added kf13-63.

	* xwindow/x_screen.c (im_changed), xwindow/x_im.h (im_changed):
	u_char -> char

	* xwindow/x_screen.c (key_pressed): allowed 'OSI <modifier> <final>'
	format as escape sequence.

	* configure, kiklib/configure, mkf/configure: regenerated.

2006-04-06  Seiichi SATO  <me@seiichisato.jp>

	* configure.in, kiklib/configure.in, mkf/configure.in: fixed
	a few of compilation errors with /usr/ccs/bin/ld of Solaris 9.
	- AC_CANONICAL_TARGET -> AC_CANONICAL_BUILD.
	- HAVE_POSIX_OPENPT should not be defined, when posix_openpt() is
	  not available.

	* doc/en/PLATFORMS: updated

2006-04-05  Seiichi SATO  <me@seiichisato.jp>

	* mkf/lib/mkf_iso2022_parser.c (parse_escape): fixed typo.
